Transformação em componentes

--- a/rafisa-app/styles/styles.css
+++ b/rafisa-app/styles/styles.css
@@ -56,6 +56,10 @@ img.medium {
   flex-wrap: wrap-reverse
 }
 
+.clearboth {
+  clear: both;
+}
+
 .background {
   background-color: rgb(182, 182, 182);
   z-index: 1;
@@ -97,6 +101,7 @@ header.sticky > div:last-child {
   margin-right: 20px;
   font-weight: 400;
   transition: 0.5s;
+  text-shadow: 1px 1px 3px black;
 }
 
 .header-info {
@@ -169,6 +174,8 @@ header.sticky > div:last-child {
   left: 6%;
   color: rgb(245, 245, 245);
   font-weight: 300;
+  text-shadow: 1px 1px 4px black;
+  margin-bottom: 5px;
 }
 
 .entry h3 {
@@ -189,6 +196,7 @@ header.sticky > div:last-child {
 .entry h1 {
   font-size: 3.5rem;
   font-weight: 300;
+  margin: 10px 0 10px 0;
 }
 .entry ul {
   display: inline-block;
@@ -201,6 +209,7 @@ header.sticky > div:last-child {
   border: 2px solid white;
   border-radius: 3px;
   box-sizing: border-box;
+  margin: 0 5px;
 }
 
 @media (max-width: 553px) {
@@ -240,10 +249,19 @@ main#content h3 {
 .box {
   background-color: var(--lightblue);
   color: white;
-  padding: 40px 30px;
+  padding: 10px 10px;
   box-shadow: 0px 0px 4px black;
   border-radius: 10px;
   font-size: 1.2rem;
+  max-width: calc(100% - 20px);
+}
+@media screen and (max-width: 393px) {
+  .box h1 {
+    font-size: 1.5rem;
+  }
+  .entry h1 {
+    font-size: 2.4rem;
+  }
 }
 .overlap {
   position: relative;
@@ -253,6 +271,7 @@ main#content h3 {
 }
 .box h1 {
   font-weight: 600;
+  margin: 0;
 }
 .box h1::after {
   content: '';
@@ -336,6 +355,11 @@ section#products {
   /* border: 1px solid black; */
   /* hyphens: auto; */
 }
+@media screen and (max-width: 600px) {
+  section#products {
+    width: 95%;
+  }
+}
 section#products h1 {
   text-align: center;
   margin: 80px 0;
@@ -345,10 +369,10 @@ section#products h3 {
   display: inline-block;
 }
 section#products article {
-  margin-bottom: 200px;
+  margin-bottom: 80px;
 }
 section#products article:first-of-type {
-  margin-top: 200px;
+  margin-top: 80px;
 }
 .product:nth-child(odd) {
   flex-direction: row-reverse;
@@ -407,6 +431,7 @@ strong {
   /* letter-spacing: 1px; */
   cursor: pointer;
   transition: .2s;
+  margin-top: 5px;
 }
 .button:hover {
   margin-bottom: -7px;
@@ -426,8 +451,8 @@ strong {
   .product, .product:nth-child(odd) {
     flex-direction: column;
   }
-  .product div:last-child {
-    width: calc(100% - 30px);
+  .product > div:last-child {
+    width: 100%;
     margin-left: 0;
   }
   .product h3, .product:nth-child(odd) h3 {
@@ -461,6 +486,7 @@ section#form h2 {
 }
 .form-input {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   margin-bottom: 20px;
   align-items: center;
@@ -502,10 +528,14 @@ footer {
 
 .footer {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 100px;
   justify-content: space-around;
   padding: 30px;
   align-items: center;
+}
+.footer > div, .footer > ul {
+  margin-top: 30px;
 }
 .footer .nav-menu ul li {
   list-style: none;
@@ -554,23 +584,29 @@ footer {
 
 /* Slider principal */
 
-#slider {
-  margin: 0 45px 0 45px;
+.slider {
+  margin: 0 10px 0 10px;
   width: 300px;
   max-width: 100%;
   text-align: center;
 }
+.slider.full {
+  width: 80vw;
+  margin: 0 auto;
+  text-align: center;
+  max-width: none;
+}
 
-#slider input[type=radio] {
+.slider input[type=radio] {
   display: none;
 }
 
-#slider label {
+.slider label {
   cursor: pointer;
   text-decoration: none;
 }
 
-#slides {
+.slides {
   border: 3px solid #ccc;
   border-radius: 12px;
   background: #fff;
@@ -578,31 +614,58 @@ footer {
   z-index: 1;
 }
 
-#overflow {
+.overflow {
   width: 100%;
   overflow: hidden;
 }
 
-#slide1:checked ~ #slides .inner {
+#slide1-1:checked ~ .slides .inner,
+#slide1-2:checked ~ .slides .inner,
+#slide1-3:checked ~ .slides .inner,
+#slide1-4:checked ~ .slides .inner,
+#slide1-5:checked ~ .slides .inner
+ {
   margin-left: 0;
 }
-#slide2:checked ~ #slides .inner {
+
+#slide2-1:checked ~ .slides .inner,
+#slide2-2:checked ~ .slides .inner,
+#slide2-3:checked ~ .slides .inner,
+#slide2-4:checked ~ .slides .inner,
+#slide2-5:checked ~ .slides .inner
+ {
   margin-left: -100%;
 }
-#slide3:checked ~ #slides .inner {
+
+#slide3-1:checked ~ .slides .inner,
+#slide3-2:checked ~ .slides .inner,
+#slide3-3:checked ~ .slides .inner,
+#slide3-4:checked ~ .slides .inner,
+#slide3-5:checked ~ .slides .inner
+ {
   margin-left: -200%;
 }
-#slide4:checked ~ #slides .inner {
+
+#slide4-1:checked ~ .slides .inner,
+#slide4-2:checked ~ .slides .inner,
+#slide4-3:checked ~ .slides .inner,
+#slide4-4:checked ~ .slides .inner {
   margin-left: -300%;
 }
 
-#slides .inner {
+.slides .inner {
   transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
   width: 400%;
   /* line-height: 0; */
   height: 200px;
 }
-#slides .slide {
+
+.inner.full {
+  height: calc(0.5625 * 80vw);
+  max-height: 500px;
+}
+
+.slides .slide {
   width: 25%;
   border-radius: 9px;
   float: left;
@@ -613,67 +676,124 @@ footer {
   color: #fff;
 }
 
-#slides .slide_1 {
+.slides .slide_1 {
   background: #00171F;
 }
-#slides .slide_2 {
+.slides .slide_2 {
   background: #003459;
 }
-#slides .slide_3 {
+.slides .slide_3 {
   background: #007ea7;
 }
-#slides .slide_4 {
+.slides .slide_4 {
   background: #00a8e8;
 }
 .slide-content {
   padding: 10px;
 }
-#controls {
+.controls {
   margin: -120px 0 0 0;
   width: 100%;
   height: 50px;
   z-index: 3;
   position: relative;
 }
-#controls label {
+
+.controls.full {
+  margin: -270px 0px 230px 0;
+}
+@media screen and (max-width: 840px) {
+  .controls.full {
+    margin: -200px 0px 150px 0;
+  }
+}
+@media screen and (max-width: 640px) {
+  .controls.full {
+    margin: -150px 0px 120px 0;
+  }
+}
+@media screen and (max-width: 450px) {
+  .controls.full {
+    margin: -120px 0px 60px 0;
+  }
+} 
+.controls label {
   transition: opacity 0.2s ease-out;
   display: none;
   width: 50px;
   height: 50px;
   opacity: .4;
 }
-#controls label:hover {
+.controls label:hover {
   opacity: 1;
 }
 
-#slide1:checked ~ #controls label:nth-child(2),
-#slide2:checked ~ #controls label:nth-child(3),
-#slide3:checked ~ #controls label:nth-child(4),
-#slide4:checked ~ #controls label:nth-child(1) {
+#slide1-1:checked ~ .controls label:nth-child(2),
+#slide2-1:checked ~ .controls label:nth-child(3),
+#slide3-1:checked ~ .controls label:nth-child(4),
+#slide4-1:checked ~ .controls label:nth-child(1),
+
+#slide1-2:checked ~ .controls label:nth-child(2),
+#slide2-2:checked ~ .controls label:nth-child(3),
+#slide3-2:checked ~ .controls label:nth-child(4),
+#slide4-2:checked ~ .controls label:nth-child(1),
+
+#slide1-3:checked ~ .controls label:nth-child(2),
+#slide2-3:checked ~ .controls label:nth-child(3),
+#slide3-3:checked ~ .controls label:nth-child(4),
+#slide4-3:checked ~ .controls label:nth-child(1),
+
+#slide1-4:checked ~ .controls label:nth-child(2),
+#slide2-4:checked ~ .controls label:nth-child(3),
+#slide3-4:checked ~ .controls label:nth-child(4),
+#slide4-4:checked ~ .controls label:nth-child(1),
+
+#slide1-5:checked ~ .controls label:nth-child(2),
+#slide2-5:checked ~ .controls label:nth-child(3),
+#slide3-5:checked ~ .controls label:nth-child(1) {
   background: url("/assets/icons/next.svg") no-repeat;
   float: right;
   margin: 0 -45px 0 0;
   display: block;
 }
 
-#slide1:checked ~ #controls label:nth-last-child(1),
-#slide2:checked ~ #controls label:nth-last-child(4),
-#slide3:checked ~ #controls label:nth-last-child(3),
-#slide4:checked ~ #controls label:nth-last-child(2) {
+#slide1-1:checked ~ .controls label:nth-last-child(1),
+#slide2-1:checked ~ .controls label:nth-last-child(4),
+#slide3-1:checked ~ .controls label:nth-last-child(3),
+#slide4-1:checked ~ .controls label:nth-last-child(2),
+
+#slide1-2:checked ~ .controls label:nth-last-child(1),
+#slide2-2:checked ~ .controls label:nth-last-child(4),
+#slide3-2:checked ~ .controls label:nth-last-child(3),
+#slide4-2:checked ~ .controls label:nth-last-child(2),
+
+#slide1-3:checked ~ .controls label:nth-last-child(1),
+#slide2-3:checked ~ .controls label:nth-last-child(4),
+#slide3-3:checked ~ .controls label:nth-last-child(3),
+#slide4-3:checked ~ .controls label:nth-last-child(2),
+
+#slide1-4:checked ~ .controls label:nth-last-child(1),
+#slide2-4:checked ~ .controls label:nth-last-child(4),
+#slide3-4:checked ~ .controls label:nth-last-child(3),
+#slide4-4:checked ~ .controls label:nth-last-child(2),
+
+#slide1-5:checked ~ .controls label:nth-last-child(1),
+#slide2-5:checked ~ .controls label:nth-last-child(3),
+#slide3-5:checked ~ .controls label:nth-last-child(2) {
   background: url("/assets/icons/back.svg") no-repeat;
   float: left;
   margin: 0 0 0 -45px;
   display: block;
 }
 
-#bullets {
+.bullets {
   margin: 70px 0 0 0;
   text-align: center;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
 }
-#bullets label {
+.bullets label {
   display: inline-block;
   width: 10px;
   height: 10px;
@@ -681,10 +801,30 @@ footer {
   background: #ccc;
   margin: 0 10px;
 }
-#slide1:checked ~ #bullets label:nth-child(1),
-#slide2:checked ~ #bullets label:nth-child(2),
-#slide3:checked ~ #bullets label:nth-child(3),
-#slide4:checked ~ #bullets label:nth-child(4) {
+
+#slide1-1:checked ~ .bullets label:nth-child(1),
+#slide2-1:checked ~ .bullets label:nth-child(2),
+#slide3-1:checked ~ .bullets label:nth-child(3),
+#slide4-1:checked ~ .bullets label:nth-child(4),
+
+#slide1-2:checked ~ .bullets label:nth-child(1),
+#slide2-2:checked ~ .bullets label:nth-child(2),
+#slide3-2:checked ~ .bullets label:nth-child(3),
+#slide4-2:checked ~ .bullets label:nth-child(4),
+
+#slide1-3:checked ~ .bullets label:nth-child(1),
+#slide2-3:checked ~ .bullets label:nth-child(2),
+#slide3-3:checked ~ .bullets label:nth-child(3),
+#slide4-3:checked ~ .bullets label:nth-child(4),
+
+#slide1-4:checked ~ .bullets label:nth-child(1),
+#slide2-4:checked ~ .bullets label:nth-child(2),
+#slide3-4:checked ~ .bullets label:nth-child(3),
+#slide4-4:checked ~ .bullets label:nth-child(4),
+
+#slide1-5:checked ~ .bullets label:nth-child(1),
+#slide2-5:checked ~ .bullets label:nth-child(2),
+#slide3-5:checked ~ .bullets label:nth-child(3) {
   background: #444;
 }
 
@@ -697,7 +837,7 @@ h1 {
   font-size: 3rem;
 }
 
-#budget-info {
+.budget-info {
   width: 90vw;
   margin: 0 auto;
   display: flex;
