--- a/rafisa-app/styles/styles.css
+++ b/rafisa-app/styles/styles.css
@@ -843,6 +843,40 @@ h1 {
   display: flex;
 }
 
+.wpp {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 20px;
+  right: 20px;
+  z-index: 20;
+  background-color: rgba(250, 250, 250, .6);
+  padding: 14px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 4px black;
+  animation-name: bounce;
+  animation-duration: 6s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+  2% {
+    transform: rotate(4deg);
+  }
+  4% {
+    transform: rotate(-4deg);
+  }
+  6% {
+    transform: rotate(0deg);
+  }
+}
+.wpp > img {
+  width: 80px;
+}
+
 /* Slider da tela de orçamento */
 
 /* #slider {
