--- a/rafisa-app/styles/styles.css
+++ b/rafisa-app/styles/styles.css
@@ -92,6 +92,14 @@ header.sticky > div:last-child {
 .header ul li a {
   color: rgb(248, 248, 248);
 }
+li.mail, li.whats {
+  text-decoration: underline;
+  cursor: pointer;
+  transition: 0.3s;
+}
+li.mail:hover, li.whats:hover {
+  color: var(--lightblue);
+}
 
 .header {
   color: rgb(230, 230, 230);
@@ -505,11 +513,15 @@ label {
   flex-grow: 1;
 }
 .form {
-  background-color: var(--lime);
+  background-color: rgb(209, 209, 209);
   padding: 40px;
   border-radius: 8px;
   color: rgb(30, 30, 30);
   font-weight: bold;
+  text-align: center;
+}
+.form p {
+  margin: 6px 0;
 }
 
 @media screen and (max-width: 710px) {
