--- a/styles/styles.css
+++ b/styles/styles.css
@@ -983,7 +983,7 @@ h1 {
   animation-iteration-count: infinite;
 }
 
-input[id=close] {
+input[id=close], input[id=closeCard] {
   display: none;
 }
 
@@ -994,7 +994,8 @@ input[id=close] {
   margin-right: -5px;
   cursor: pointer;
 }
-input[id=close]:checked ~ .wpp-container {
+input[id=close]:checked ~ .wpp-container,
+input[id=closeCard]:checked ~ .card-top {
   animation-name: close;
   animation-duration: 1s;
   animation-iteration-count: 1;
@@ -1067,3 +1068,45 @@ input[id=close]:checked ~ .wpp-container {
     font-size: 0.8rem;
   }
 }
+
+/* Notify */
+
+.card-top.d-none {
+  top: -100px;
+}
+
+.card-top h6 {
+  font-size: 17pt;
+}
+
+.card-top {
+  position: fixed;
+  color: white;
+  display: inline-block;
+  border-radius: 4px;
+  top: 80px;
+  right: 5px;
+  max-width: 300px;
+  z-index: 30;
+  padding: 6px 10px 10px 10px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.74);
+  transition: .5s ease-in-out;
+}
+
+.card-top-success {
+  background-color: rgb(27, 158, 27);
+}
+.card-top-error {
+  background-color: rgb(206, 27, 27);
+}
+
+.card-top div:first-child div:first-child {
+  text-align: right;
+  float: right;
+}
+.card-top img.close {
+  width: 10px;
+  cursor: pointer;
+}
+
+
