--- a/styles/styles.css
+++ b/styles/styles.css
@@ -612,7 +612,13 @@ footer {
   align-items: center;
   gap: 16px;
 }
-.contact > li {
+.contact > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.contact li {
   display: flex;
   gap: 8px;
   align-items: center;
